kubernetes/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: b
  labels:
    app: b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b
  template:
    metadata:
      labels:
        app: b
    spec:
      containers:
        - name: b
          image: username/b:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: b2
  labels:
    app: b2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b2
  template:
    metadata:
      labels:
        app: b2
    spec:
      containers:
        - name: b2
          image: username/b2:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: b
  labels:
    app: b
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: b


---


apiVersion: v1
kind: Service
metadata:
  name: b2
  labels:
    app: b2
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: b2
